# agent-observable

./: .gitignore  README.md  main.py  pyproject.toml
examples/taskpilot/: .coveragerc  .env.example  .envrc  .gitignore  .tasks.json.bak  FILE_ORGANIZATION.md  Makefile  README.md  docker-compose.observability.yml  main.py  metrics.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
examples/taskpilot/docs/: ARCHITECTURE.md  ARCHIVE_README.md  CONFIGURATION.md  COST_TRACKING_GUIDE.md  CURRENT_ARCHITECTURE.md  DEMO_VIEWING_GUIDE.md  ENTERPRISE_LIBRARY_ASSESSMENT.md  FRAMEWORK_AGNOSTIC_DESIGN.md  HUMAN_REVIEW_LOGGING.md  IMPLEMENTATION_TRACKER.md  INTEGRATION_TEST_GUIDE.md  KIBANA_FILTERS.md  KIBANA_QUICK_FILTER.md  KIBANA_TIME_RANGE_FIX.md  KIBANA_TROUBLESHOOTING.md  LOCAL_VS_PRODUCTION_STORAGE.md  MUST_HAVE_FEATURES.md  OBSERVABILITY_TEST_AUTOMATION.md  OBSERVABILITY_TOOLS_WALKTHROUGH.md  ONBOARDING.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  REUSABILITY_CRITIQUE.md  RUN_INSTRUCTIONS.md  SESSION_BOOTSTRAP.md  SETUP_MONOREPO.md  SPECIFICATION.md  TESTING.md  TROUBLESHOOTING.md  UNIFIED_FRAMEWORK_PLAN.md  USING_THE_LIBRARY.md
examples/taskpilot/docs/details/: AUTO_ACTIVATE_VENV.md  CAPABILITIES_MATRIX.md  CHANGELOG.md  DESIGN.md  DEVELOPMENT_PRACTICES.md  DOCKER_SETUP.md  EMBEDDED_OPA_IMPLEMENTATION.md  ENDPOINTS_USAGE.md  ERROR_HANDLING.md  (+13 more)
examples/taskpilot/policies/: tool_calls.rego
examples/taskpilot/prompts/: executor.yaml  planner.yaml  reviewer.yaml
examples/taskpilot/scripts/: README.md  check_jaeger.py  check_metrics.py  demo.sh  generate_demo_data.py  restart_server.sh  run.sh  run_demo.sh  setup_kibana_index.py  test_e2e_observability.sh  test_jaeger.py  test_jaeger_hierarchy.py  test_jaeger_traces.py  test_observability_integration.py  test_observability_stack.py  verify_demo_data.py  verify_jaeger_hierarchy.py  view_costs.py
examples/taskpilot/src/: __init__.py
examples/taskpilot/tests/: README.md  __init__.py  conftest.py  test_config.py  test_cost_report_endpoint.py  test_cost_tracking_integration.py  test_decision_logs_kibana.py  test_e2e_observability.py  test_function_calling.py  test_golden_signals.py  test_guardrails.py  test_integration.py  test_llm_cost_tracker.py  test_main.py  test_middleware.py  test_middleware_async.py  test_observability.py  test_opa_embedded.py  test_otel_integration.py  test_performance.py  test_retry.py  test_structured_output.py  test_task_store.py  test_tools.py  test_workflow.py
libraries/agent-observable-core/: README.md  pyproject.toml
libraries/agent-observable-core/docs/: AUTO_ENABLED_OBSERVABILITY.md  DOCKER_TOOLS.md  METRICS.md  POLICY_DECISIONS.md  TRACES.md
libraries/agent-observable-core/tests/: __init__.py  test_observability.py  test_otel_integration.py
libraries/agent-observable-guardrails/: pyproject.toml
libraries/agent-observable-guardrails/tests/: __init__.py  test_guardrails.py
libraries/agent-observable-policy/: pyproject.toml
libraries/agent-observable-policy/tests/: __init__.py  test_policy.py
libraries/agent-observable-prompt/: pyproject.toml
libraries/agent-observable-prompt/tests/: __init__.py  test_prompt.py
(+94 files in other folders)
