[project]
name = "taskpilot"
version = "0.1.0"
description = "Add your description here"
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-framework>=1.0.0b251001",
    "openai",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"taskpilot" = "src"}
packages = ["taskpilot"]
