[project]
name = "agent-observable-core"
version = "0.1.0"
description = "Core observability primitives for agents (metrics, traces, errors, health)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
