[project]
name = "agent-observable-guardrails"
version = "0.1.0"
description = "Guardrails library for agent systems (NeMo Guardrails integration)"
requires-python = ">=3.11"
dependencies = [
    "agent-observable-policy>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "nemoguardrails>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
